# kplot

./: LICENSE  README.md  __init__.py  axes.py  cmaps.py  colorblind.py  dark.py  grayscale.py  hist.py  image.py  kg.py  lib.py  movie.py  plot.py  pyproject.toml  test.ipynb  utils.py
.ipynb_checkpoints/: kg-checkpoint.py  test-checkpoint.ipynb
kplot.egg-info/: PKG-INFO
src/kplot/: __init__.py  axes.py  cmaps.py  hist.py  image.py  movie.py  plot.py  utils.py
src/kplot/styles/: publication.mpl
src/kplot/threeD/: slider_images.py
styles/: colorblind.mplstyle  grayscale.mplstyle
threeD/: __init__.py
