[project]
name = "kplot"
version = "1.1.19"
description = "a matplotlib wrapper for keyan :-)"
readme = "README.md"
authors = [
  { name="Keyan Gootkin", email="keyangootkin@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "kbasic>=0.1.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
